--- a/docs-v2/integrate/guides/perform-workflows-with-an-api.mdx
+++ b/docs-v2/integrate/guides/perform-workflows-with-an-api.mdx
@@ -15,7 +15,7 @@ Nango uses [actions](/understand/concepts/actions) to perform workflows involvin
 Select your integration in the _Integrations_ tab, and navigate to the _Scripts_ tab. Available action templates will appear in the _Action Scripts_ section. Select the relevant one and enable it with the toggle.
 
 <Tip>
-Is there no template for your API? Or none matching your exact use case? 
+Is there no template for your API? Or none matching your exact use case?
 
 Learn more about how to [build a custom integration](/customize/guides/create-a-custom-integration), [extend a template](/customize/guides/extend-an-integration-template) or [request custom integrations from Nango experts](/host/managed-integrations).
 </Tip>
@@ -52,13 +52,13 @@ const result = await nango.triggerAction('<INTEGRATION-ID>', '<CONNECTION-ID>', 
 </Tabs>
 
 <Tip>
- If you consume the API (vs. the SDK), you can use the standard endpoint (above) or a unique generated endpoint described in the _API Reference_ tab of your integration in the Nango UI. The generated endpoint documents the specific parameters & responses of each action. 
+ If you consume the API (vs. the SDK), you can use the standard endpoint (above) or a unique generated endpoint described in the _API Reference_ tab of your integration in the Nango UI. The generated endpoint documents the specific parameters & responses of each action.
 </Tip>
 
 
 # Troubleshoot errors & monitor
 
-Navigate to the _Activity_ tab to inspect potential errors & monitor action executions. 
+Navigate to the _Logs_ tab to inspect potential errors & monitor action executions.
 
 
 <Tip>
