--- a/docs-v2/integrate/guides/sync-data-from-an-api.mdx
+++ b/docs-v2/integrate/guides/sync-data-from-an-api.mdx
@@ -174,7 +174,7 @@ Write back to APIs with actions ([step-by-step guide](/integrate/guides/perform-
 
 # Troubleshoot errors & monitor
 
-Navigate to the _Activity_ tab to inspect potential errors & monitor sync executions.
+Navigate to the _Logs_ tab to inspect potential errors & monitor sync executions.
 
 <Tip>
 **Questions, problems, feedback?** Please reach out in the [Slack community](https://nango.dev/slack).
