--- a/docs-v2/understand/concepts/proxy.mdx
+++ b/docs-v2/understand/concepts/proxy.mdx
@@ -13,7 +13,7 @@ Nango's Proxy simplifies making authenticated requests to external APIs. It’s 
 - **Automatic Credential Injection:** Automatically adds necessary authentication to your API requests.
 - **Base URL Setup:** Automatically determines and sets the correct base URL for your API requests.
 - **Effortless Pagination:** Simplifies dealing with API pagination.
-- **Logs for Debugging:** Tracks your requests in the Activity tab for easy debugging.
+- **Logs for Debugging:** Tracks your requests in the Logs tab for easy debugging.
 - **Rate-limit Management:** Handles rate limits with smart retries ([step-by-step guide](/customize/guides/advanced/handle-rate-limits)).
 
 # Use cases
