fix: bold title in architecture doc

--- a/docs-v2/understand/architecture.mdx
+++ b/docs-v2/understand/architecture.mdx
@@ -20,7 +20,7 @@ This component stores configuration data for users, integrations, connections, a
 
 The Orchestrator service manages the scheduling of script executions. It’s responsible for orchestrating the timing and execution of data synchronization tasks, ensuring that sync scripts run according to their schedules without loss or delay.
 
-Jobs Service
+**Jobs Service**
 
 The Jobs Service dispatches jobs to runner services. It acts as the central manager that allocates integration script execution tasks to available runners, balancing load and ensuring efficient processing of integration logic.
 
