Add note on docusign sandbox to API docs

--- a/docs-v2/integrations/all/docusign.mdx
+++ b/docs-v2/integrations/all/docusign.mdx
@@ -3,7 +3,7 @@ title: Docusign
 sidebarTitle: Docusign
 ---
 
-API configuration: [`docusign`](https://nango.dev/providers.yaml)
+API configuration: [`docusign`](https://nango.dev/providers.yaml), [`docusign-sandbox`](https://nango.dev/providers.yaml)
 
 ## Features
 
@@ -27,5 +27,7 @@ API configuration: [`docusign`](https://nango.dev/providers.yaml)
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
+
+- Use the `docusign-sandbox` configuration in Nango to test your integration with the [Docusign Developer account](https://developers.docusign.com/platform/account/).
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/docusign.mdx)</Note>
