--- a/docs-v2/integrations/sports.mdx
+++ b/docs-v2/integrations/sports.mdx
@@ -4,6 +4,7 @@
 </Tip>
 
 <CardGroup cols={4}>
+    <Card title="Coros" href="/integrations/all/coros" color="#68a063" />
     <Card title="Fitbit" href="/integrations/all/fitbit" color="#68a063" />
     <Card title="Oura" href="/integrations/all/oura" color="#68a063" />
     <Card title="Strava" href="/integrations/all/strava" color="#68a063" />
