--- a/docs-v2/integrations/design.mdx
+++ b/docs-v2/integrations/design.mdx
@@ -13,6 +13,7 @@
     <Card title="Mural" href="/integrations/all/mural" color="#68a063" />
     <Card title="Pinterest" href="/integrations/all/pinterest" color="#68a063" />
     <Card title="Squarespace" href="/integrations/all/squarespace" color="#68a063" />
+    <Card title="Webflow" href="/integrations/all/webflow" color="#68a063" />
     <Card title="Woocommerce" href="/integrations/all/woocommerce" color="#68a063" />
     <Card title="Wordpress" href="/integrations/all/wordpress" color="#68a063" />
 </CardGroup>
