--- a/docs-v2/integrations/dev-tools.mdx
+++ b/docs-v2/integrations/dev-tools.mdx
@@ -25,6 +25,7 @@ sidebarTitle: Developer Tools
     <Card title="Shortcut" href="/integrations/all/shortcut" color="#68a063" />
     <Card title="Snowflake" href="/integrations/all/snowflake" color="#68a063" />
     <Card title="Squarespace" href="/integrations/all/squarespace" color="#68a063" />
+    <Card title="Webflow" href="/integrations/all/webflow" color="#68a063" />
     <Card title="Woocommerce" href="/integrations/all/woocommerce" color="#68a063" />
     <Card title="Wordpress" href="/integrations/all/wordpress" color="#68a063" />
     <Card title="Wakatime" href="/integrations/all/wakatime" color="#68a063" />
