Adding sandbox account

--- a/docs-v2/integrations/all/coros.mdx
+++ b/docs-v2/integrations/all/coros.mdx
@@ -3,7 +3,7 @@ title: Coros
 sidebarTitle: Coros
 ---
 
-API configuration: [`oura`](https://nango.dev/providers.yaml)
+API configuration: [`coros`](https://nango.dev/providers.yaml), [`coros-sandbox`](https://nango.dev/providers.yaml)
 
 ## Features
 
@@ -28,3 +28,4 @@ API configuration: [`oura`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 - Coros does not list any Oauth scopes in their documentation, so it will be a trial and error process to figure out what is needed.
+- The Coros sandbox is their test environment set up for developers. Set up separate Nango integrations for the sandbox and production accounts.
