feat(integrations): add support for luma

--- a/docs-v2/integrations/ticketing.mdx
+++ b/docs-v2/integrations/ticketing.mdx
@@ -35,6 +35,7 @@ Ask us in the [Slack community](https://nango.dev/slack), and we can help you qu
     <Card title="Jira" href="/integrations/all/jira" color="#68a063" />
     <Card title="Jira Data Center" href="/integrations/all/jira-data-center" color="#68a063" />
     <Card title="Linear" href="/integrations/all/linear" color="#68a063" />
+    <Card title="Luma" href="/integrations/all/luma" color="#68a063" />
     <Card title="Monday" href="/integrations/all/monday" color="#68a063" />
     <Card title="Teamwork" href="/integrations/all/teamwork" color="#68a063" />
     <Card title="Todoist" href="/integrations/all/todoist" color="#68a063" />
@@ -45,6 +46,6 @@ Ask us in the [Slack community](https://nango.dev/slack), and we can help you qu
 
 <Tip>
     Missing a ticketing API?
-    
+
     We can add new APIs within 24h, just ask us on the [community](https://nango.dev/slack). Or you can also [contribute it](/customize/guides/contribute-an-api) yourself.
 </Tip>
