Documentation updates and icon symlinking

--- a/docs-v2/integrations/all/coros.mdx
+++ b/docs-v2/integrations/all/coros.mdx
@@ -19,13 +19,11 @@ API configuration: [`coros`](https://nango.dev/providers.yaml), [`coros-sandbox`
 
 ## Getting started
 
--   [OAuth related docs](https://www.dropbox.com/scl/fo/6ps1297tn9pfo7qmcb0o8/AItfHWAW8t-jZ0NIrAaT0hg?e=1&preview=COROS+API+Reference+V2.0.5(Updated).pdf&rlkey=kbq4zmu47j9c3c6qu7b96z39f&st=ntqasbgo&dl=0)
 -   [How Register an Application](https://support.coros.com/hc/en-us/articles/17085887816340-Submit-an-API-Application)
--   Scopes - Coros does not list any scopes in their documentation
--   [Oura REST API](https://www.dropbox.com/scl/fo/6ps1297tn9pfo7qmcb0o8/AItfHWAW8t-jZ0NIrAaT0hg?e=1&preview=COROS+API+Reference+V2.0.5(Updated).pdf&rlkey=kbq4zmu47j9c3c6qu7b96z39f&st=ntqasbgo&dl=0)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
-- Coros does not list any Oauth scopes in their documentation, so it will be a trial and error process to figure out what is needed.
+- The Coros API documentation is private, so use the Register Application link above to get access, and the Coros team will share them with you.
+- Coros does not list any Oauth scopes in their documentation.
 - The Coros sandbox is their test environment set up for developers. Set up separate Nango integrations for the sandbox and production accounts.
