--- a/docs-v2/integrations/crm.mdx
+++ b/docs-v2/integrations/crm.mdx
@@ -45,6 +45,7 @@ Ask us in the [Slack community](https://nango.dev/slack) and we can help you qui
     <Card title="Wealthbox" href="/integrations/all/wealthbox" color="#68a063" />
     <Card title="Unanet" href="/integrations/all/unanet" color="#68a063" />
     <Card title="Zoho CRM" href="/integrations/all/zoho-crm" color="#68a063" />
+    <Card title="ZoomInfo" href="/integrations/all/zoominfo" color="#68a063" />
 </CardGroup>
 
 <Tip>
