feat(integrations): add listmonk basic auth proxy

--- a/docs-v2/integrations/marketing.mdx
+++ b/docs-v2/integrations/marketing.mdx
@@ -4,8 +4,8 @@ sidebarTitle: Marketing
 ---
 
 <Tip>
-    Missing an API? It's fast & easy to [contribute it](/customize/guides/contribute-an-api) or we'll build it if you ask for
-    it in the [community](https://nango.dev/slack).
+    Missing an API? It's fast & easy to [contribute it](/customize/guides/contribute-an-api) or we'll build it if you ask for it in the
+    [community](https://nango.dev/slack).
 </Tip>
 
 <CardGroup cols={4}>
@@ -18,6 +18,7 @@ sidebarTitle: Marketing
     <Card title="Instantly" href="/integrations/all/instantly" color="#68a063" />
     <Card title="Keap" href="/integrations/all/keap" color="#68a063" />
     <Card title="Klaviyo" href="/integrations/all/klaviyo" color="#68a063" />
+    <Card title="Listmonk" href="/integrations/all/listmonk" color="#68a063" />
     <Card title="Mailchimp" href="/integrations/all/mailchimp" color="#68a063" />
     <Card title="Marketo" href="/integrations/all/marketo" color="#68a063" />
     <Card title="Mailgun" href="/integrations/all/mailgun" color="#68a063" />
