--- a/docs-v2/integrations/all/listmonk.mdx
+++ b/docs-v2/integrations/all/listmonk.mdx
@@ -24,3 +24,8 @@ API configurations: [`listmonk`](https://nango.dev/providers.yaml)
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
+
+_None yet, add yours!_
+
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/listmonk.mdx)</Note>
+
