Fixing readme typo

--- a/docs-v2/integrations/all/listmonk.mdx
+++ b/docs-v2/integrations/all/listmonk.mdx
@@ -9,7 +9,7 @@ API configurations: [`listmonk`](https://nango.dev/providers.yaml)
 
 | Features                                                             | Status                           |
 | -------------------------------------------------------------------- | -------------------------------- |
-| [Auth (OAuth)](/integrate/guides/authorize-an-api)                   | ✅                               |
+| [Auth (Basic)](/integrate/guides/authorize-an-api)                   | ✅                               |
 | [Sync data](/integrate/guides/sync-data-from-an-api)                 | 🚫 (time to contribute: &lt;48h) |
 | [Perform workflows](/integrate/guides/perform-workflows-with-an-api) | 🚫 (time to contribute: &lt;48h) |
 | [Proxy requests](/integrate/guides/proxy-requests-to-an-api)         | ✅                               |
