Add/edit punctuation in canny.mdx

--- a/docs-v2/integrations/all/canny.mdx
+++ b/docs-v2/integrations/all/canny.mdx
@@ -26,6 +26,6 @@ API configuration: [`canny`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
-_None yet, add yours!_
+_None yet. Add yours!_
 
-<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/calendly.mdx)</Note>
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/calendly.mdx).</Note>
