Fix a small typo

--- a/docs-v2/integrations/all/canny.mdx
+++ b/docs-v2/integrations/all/canny.mdx
@@ -20,7 +20,7 @@ API configuration: [`canny`](https://nango.dev/providers.yaml)
 ## Getting started
 
 -   [API Reference](https://developers.canny.io/api-reference)
--   [Auyhentication](https://developers.canny.io/api-reference#authentication)
+-   [Authentication](https://developers.canny.io/api-reference#authentication)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
