--- a/docs-v2/integrations/all/canny.mdx
+++ b/docs-v2/integrations/all/canny.mdx
@@ -26,6 +26,7 @@ API configuration: [`canny`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
-_None yet. Add yours!_
+- Canny's API docs only mention POST requests, but the API's endpoints also accept GET requests.
+- For GET requests, the API accepts any piece of body data as a URL param.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/calendly.mdx).</Note>
