--- a/docs-v2/reference/integration-configuration.mdx
+++ b/docs-v2/reference/integration-configuration.mdx
@@ -221,11 +221,12 @@ Types not listed here are not supported. If you think we are missing something, 
 
 ### Arrays
 
-Your can use array types if the `[]` notation:
+Your can use array types like this:
 ```yaml nango.yaml
 models:
   Folder:
     files: string[]
+    tickets: any[]
 ```
 
 ### Type & string unions
