feat(integrations): add support for contentful

--- a/docs-v2/integrations/all/coros.mdx
+++ b/docs-v2/integrations/all/coros.mdx
@@ -27,3 +27,5 @@ API configuration: [`coros`](https://nango.dev/providers.yaml), [`coros-sandbox`
 - The Coros API documentation is private, so use the Register Application link above to get access, and the Coros team will share them with you.
 - Coros does not list any Oauth scopes in their documentation.
 - The Coros sandbox is their test environment set up for developers. Set up separate Nango integrations for the sandbox and production accounts.
+
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/coros.mdx)</Note>
