--- a/docs-v2/integrations/cms.mdx
+++ b/docs-v2/integrations/cms.mdx
@@ -9,6 +9,7 @@ sidebarTitle: CMS
 </Tip>
 
 <CardGroup cols={4}>
+    <Card title="Contentful" href="/integrations/all/contentful" color="#68a063" />
     <Card title="Contentstack" href="/integrations/all/contentstack" color="#68a063" />
     <Card title="Webflow" href="/integrations/all/webflow" color="#68a063" />
     <Card title="Wordpress" href="/integrations/all/wordpress" color="#68a063" />
