--- a/docs-v2/integrations/design.mdx
+++ b/docs-v2/integrations/design.mdx
@@ -6,6 +6,7 @@
 <CardGroup cols={4}>
     <Card title="Adobe" href="/integrations/all/adobe" color="#68a063" />
     <Card title="Autodesk" href="/integrations/all/autodesk" color="#68a063" />
+    <Card title="Contentful" href="/integrations/all/contentful" color="#68a063" />
     <Card title="Figjam" href="/integrations/all/figjam" color="#68a063" />
     <Card title="Figma" href="/integrations/all/figma" color="#68a063" />
     <Card title="Gumroad" href="/integrations/all/gumroad" color="#68a063" />
