--- a/docs-v2/integrations/dev-tools.mdx
+++ b/docs-v2/integrations/dev-tools.mdx
@@ -14,6 +14,7 @@ sidebarTitle: Developer Tools
     <Card title="AWS" href="/integrations/all/aws" color="#68a063" />
     <Card title="Atlassian" href="/integrations/all/atlassian" color="#68a063" />
     <Card title="Bitbucket" href="/integrations/all/bitbucket" color="#68a063" />
+    <Card title="Contentful" href="/integrations/all/contentful" color="#68a063" />
     <Card title="Digital Ocean" href="/integrations/all/digitalocean" color="#68a063" />
     <Card title="Github" href="/integrations/all/github" color="#68a063" />
     <Card title="Gitlab" href="/integrations/all/gitlab" color="#68a063" />
