[nan-1349] update docs

--- a/docs-v2/understand/concepts/templates.mdx
+++ b/docs-v2/understand/concepts/templates.mdx
@@ -4,7 +4,7 @@ sidebarTitle: 'Integration templates'
 description: 'Learn more about integration templates.'
 ---
 
-Nango integration templates are pre-built integration components. They enable you to either synchronize data models or trigger specific actions across various platforms. 
+Nango integration templates are pre-built integration components. They enable you to either synchronize data models or trigger specific actions across various platforms.
 
 # What are Templates?
 
@@ -45,6 +45,8 @@ Templates are invaluable for learning about integration best practices, includin
 # Template Updates
 
 Currently, templates do not update automatically; they remain at the version you activate. This ensures your integration remains stable over time, without unexpected changes from template updates.
+
+If you have an active template that has been updated, you'll see an "Upgrade Template" button on the script page. This button will first warn you of the dangers of upgrading, and if you agree, it will bring your template up to date with the latest code.
 
 # Resources
 
