[nan-1349] update import

--- a/docs-v2/customize/guides/advanced/validate-input-and-output.mdx
+++ b/docs-v2/customize/guides/advanced/validate-input-and-output.mdx
@@ -44,7 +44,7 @@ npx ts-to-zod .nango/schema.ts schema.zod.ts
 You can use zod models in your scripts too
 </Tip>
 ```typescript
-import { myZodModel } from '../../schema.zod.ts';
+import { myZodModel } from '../../schema.zod.js';
 
 export default async fetchData(nango: Nango) {
   const response = await nango.get({ endpoint: '/tickets' });
