--- a/docs-v2/integrations/analytics.mdx
+++ b/docs-v2/integrations/analytics.mdx
@@ -13,6 +13,7 @@ sidebarTitle: Analytics
     <Card title="Fireflies" href="/integrations/all/fireflies" color="#68a063" />
     <Card title="Mixpanel" href="/integrations/all/mixpanel" color="#68a063" />
     <Card title="Segment" href="/integrations/all/segment" color="#68a063" />
+    <Card title="Tableau" href="/integrations/all/tableau" color="#68a063" />
     <Card title="People Data Labs" href="/integrations/all/peopledatalabs" color="#68a063" />
     <Card title="Wakatime" href="/integrations/all/wakatime" color="#68a063" />
 </CardGroup>
