feat(integrations): add support for tsheetsteam

--- a/docs-v2/integrations/hr.mdx
+++ b/docs-v2/integrations/hr.mdx
@@ -18,5 +18,6 @@ sidebarTitle: HR
     <Card title="Exact Online" href="/integrations/all/exact-online" color="#68a063" />
     <Card title="Payfit" href="/integrations/all/payfit" color="#68a063" />
     <Card title="Personio" href="/integrations/all/personio" color="#68a063" />
+    <Card title="Tsheetsteam" href="/integrations/all/tsheetsteam" color="#68a063" />
     <Card title="Zenefits" href="/integrations/all/zenefits" color="#68a063" />
 </CardGroup>
