--- a/docs-v2/integrations/payroll.mdx
+++ b/docs-v2/integrations/payroll.mdx
@@ -13,4 +13,5 @@ sidebarTitle: Payroll
     <Card title="Deel" href="/integrations/all/deel" color="#68a063" />
     <Card title="Gusto" href="/integrations/all/gusto" color="#68a063" />
     <Card title="Payfil" href="/integrations/all/payfit" color="#68a063" />
+    <Card title="Tsheetsteam" href="/integrations/all/tsheetsteam" color="#68a063" />
 </CardGroup>
