--- a/docs-v2/integrations/all/tableau.mdx
+++ b/docs-v2/integrations/all/tableau.mdx
@@ -27,7 +27,7 @@ API configuration: [`tableau`](https://nango.dev/providers.yaml)
 
 ## API gotchas
 
-- When creating a new Nango connection, please supply your Token name as your PAT NAME, Token secret as your PAT SECRET, and the content URL, which is the value that appears after `/site/` in the browser address bar for Tableau Cloud. This field is left blank if you are using Tableau Server.
+- When creating a new Nango connection, please supply your Token name as your PAT NAME, Token secret as your PAT SECRET, and the content URL, which is the value that appears after `/site/` in the browser address bar for Tableau Cloud, i.e `/site/nango1ec257d4d0/user/`, would be `nango1ec257d4d0`. This field is left blank if you are using Tableau Server.
 - You will also need to provide the [version](https://help.tableau.com/current/api/rest_api/en-us/REST/rest_api_concepts_versions.htm) and [server](https://help.tableau.com/current/api/rest_api/en-us/REST/rest_api_concepts_auth.htm#the-sign-in-uri) name.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/tableau.mdx)</Note>
