small fixes to the docs

--- a/docs-v2/customize/guides/advanced/validate-input-and-output.mdx
+++ b/docs-v2/customize/guides/advanced/validate-input-and-output.mdx
@@ -8,7 +8,7 @@ Nango automatically validates your integration inputs & outputs. It also offers 
 
 ## Automatic validation
 
-The validation is available during development and production, and do not require any configuration from you:
+The validation is available during development and production, and does not require any configuration from you:
 
 - **CLI**: Dry Run validation errors are logged and will halt execution when using `--validation` command option
 - **Production**: Validation errors are logged but do not halt execution
