--- a/docs-v2/reference/integration-configuration.mdx
+++ b/docs-v2/reference/integration-configuration.mdx
@@ -24,7 +24,7 @@ integrations:
         scopes: # Required scopes.
           - scope1
           - scope2
-        auto_starts: true # If true, data syncing starts when a new connection is created.
+        auto_start: true # If true, data syncing starts when a new connection is created.
         track_deletes: true # If true, automatically detects deleted records (for full refresh syncs only).
         webhook_subscriptions: # The types of webhook this sync handles.
           - subscription1
