Add TickTick OAuth provider
Add the OAuth2 configuration to create a [TickTick](https://ticktick.com) API integration.

--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -43,6 +43,7 @@ sidebarTitle: Productivity
     <Card title="Slack" href="/integrations/all/slack" color="#68a063" />
     <Card title="Smartsheet" href="/integrations/all/smartsheet" color="#68a063" />
     <Card title="Teamwork" href="/integrations/all/teamwork" color="#68a063" />
+    <Card title="TickTick" href="/integrations/all/ticktick" color="#68a063" />
     <Card title="Timely" href="/integrations/all/timely" color="#68a063" />
     <Card title="Todoist" href="/integrations/all/todoist" color="#68a063" />
     <Card title="Trello" href="/integrations/all/trello" color="#68a063" />
