--- a/docs-v2/integrations/ticketing.mdx
+++ b/docs-v2/integrations/ticketing.mdx
@@ -38,6 +38,7 @@ Ask us in the [Slack community](https://nango.dev/slack), and we can help you qu
     <Card title="Luma" href="/integrations/all/luma" color="#68a063" />
     <Card title="Monday" href="/integrations/all/monday" color="#68a063" />
     <Card title="Teamwork" href="/integrations/all/teamwork" color="#68a063" />
+    <Card title="TickTick" href="/integrations/all/ticktick" color="#68a063" />
     <Card title="Todoist" href="/integrations/all/todoist" color="#68a063" />
     <Card title="Trello" href="/integrations/all/trello" color="#68a063" />
     <Card title="Zendesk" href="/integrations/all/zendesk" color="#68a063" />
