--- a/docs-v2/integrations/accounting.mdx
+++ b/docs-v2/integrations/accounting.mdx
@@ -24,6 +24,7 @@ Ask us in the [Slack community](https://nango.dev/slack) and we can help you qui
 ## Accounting APIs supported by Nango
 
 <CardGroup cols={4}>
+    <Card title="E-conomic" href="/integrations/all/e-conomic" color="#68a063" />
     <Card title="Exact Online" href="/integrations/all/exact-online" color="#68a063" />
     <Card title="Freshbooks" href="/integrations/all/freshbooks" color="#68a063" />
     <Card title="Intuit" href="/integrations/all/intuit" color="#68a063" />
