--- a/docs-v2/integrations/all/e-conomic.mdx
+++ b/docs-v2/integrations/all/e-conomic.mdx
@@ -27,7 +27,7 @@ API configuration: [`e-conomic`](https://nango.dev/providers.yaml)
 
 
 ## API gotchas
-- E-conomic in Nango uses `Basic` auth mode to access different endpoints. Provide your `YOUR_PRIVATE_TOKEN` as the Username value and `partnerUserSecret` as the Password value.
+- E-conomic in Nango uses `Basic` auth mode to access different endpoints. Provide your `YOUR_PRIVATE_TOKEN` as the Username value and `YOUR_AGREEMENT_GRANT_TOKEN` as the Password value.
 - After creating a connection, you can use the Basic credentials as follows;
 ```js
 let headers: { [key: string]: string } = {};
