Add note about scale plan limit to incoming webhooks docs page

--- a/docs-v2/integrate/guides/receive-webhooks-from-an-api.mdx
+++ b/docs-v2/integrate/guides/receive-webhooks-from-an-api.mdx
@@ -4,6 +4,10 @@ sidebarTitle: 'Receive webhooks from an API'
 description: 'Step-by-step guide on how to receive webhooks from an API.'
 ---
 
+<Note>
+Please note that receiving webhooks in Nango is currently only available on the [Scale plan](https://www.nango.dev/pricing).
+</Note>
+
 Nango makes it easy to add support for webhooks coming from **any** API. If your API doesn't have off-the-shelf support, simply request it in the [community](https://nango.dev/slack); we can deliver them in &lt;48h.
 
 Nango currently has off-the-shelf support for webhooks coming from the following APIs:
