feat(integrations): add support for fiserv

--- a/docs-v2/integrations/overview.mdx
+++ b/docs-v2/integrations/overview.mdx
@@ -7,7 +7,7 @@ sidebarTitle: Overview
 Nango is an open-source platform for product integrations. Integrate with external APIs in hours, not weeks, while maintaining full control ([learn more](/introduction)).
 </Note>
 
-Nango is pre-configured for 190+ APIs and integration templates. 
+Nango is pre-configured for 190+ APIs and integration templates.
 
 # Explore APIs by Category
 
@@ -59,7 +59,7 @@ Nango is pre-configured for 190+ APIs and integration templates.
         Integrate your app with Salesforce
     </Card>
     <Card title="HubSpot" href="/integrations/all/hubspot" icon="hubspot">
-        Integrate your app with Salesforce
+        Integrate your app with HubSpot
     </Card>
     <Card title="Shopify" href="/integrations/all/shopify" icon="shopify">
         Integrate your app with Shopify
