--- a/docs-v2/integrations/banking.mdx
+++ b/docs-v2/integrations/banking.mdx
@@ -5,6 +5,7 @@
 
 <CardGroup cols={4}>
     <Card title="Brex" href="/integrations/all/brex" color="#68a063" />
+    <Card title="Fiserv" href="/integrations/all/fiserv" color="#68a063" />
     <Card title="Pennylane" href="/integrations/all/pennylane" color="#68a063" />
     <Card title="Ramp" href="/integrations/all/ramp" color="#68a063" />
 </CardGroup>
