fix: support special characters in db urls
This commit URL encode db username and password when used inside
postgres db url
If db urls are set as env vars, users must URL encode them if they
contain any special char

--- a/docs-v2/host/self-host/self-hosting-instructions.mdx
+++ b/docs-v2/host/self-host/self-hosting-instructions.mdx
@@ -51,6 +51,7 @@ Records saved by syncs can be persisted in a dedicated database. If you opt in f
 ```
 RECORDS_DATABASE_URL=postgresql://user:password@host:port/dbname
 ```
+Special characters in the RECORDS_DATABASE_URL should be URL encoded.
 If not specified, the records will be stored in the main database.
 
 <Tip>
