feat(integrations): add support for tumblr

--- a/docs-v2/integrations/social.mdx
+++ b/docs-v2/integrations/social.mdx
@@ -18,6 +18,7 @@ sidebarTitle: Social
     <Card title="Splitwise" href="/integrations/all/splitwise" color="#68a063" />
     <Card title="Strava" href="/integrations/all/strava" color="#68a063" />
     <Card title="TikTok" href="/integrations/all/tiktok" color="#68a063" />
+    <Card title="Tumblr" href="/integrations/all/tumblr" color="#68a063" />
     <Card title="Twitch" href="/integrations/all/twitch" color="#68a063" />
     <Card title="Twitter" href="/integrations/all/twitter" color="#68a063" />
     <Card title="Yahoo" href="/integrations/all/yahoo" color="#68a063" />
