--- a/docs-v2/integrations/all/circle-so.mdx
+++ b/docs-v2/integrations/all/circle-so.mdx
@@ -1,9 +1,9 @@
 ---
-title: Circle
-sidebarTitle: Circle
+title: Circle So
+sidebarTitle: Circle So
 ---
 
-API configurations: [`circle`](https://nango.dev/providers.yaml)
+API configurations: [`circle-so`](https://nango.dev/providers.yaml)
 
 ## Features
 
@@ -19,13 +19,13 @@ API configurations: [`circle`](https://nango.dev/providers.yaml)
 
 ## Getting started
 
--   [Circle Auth docs](https://api.circle.so/#intro)
+-   [Circle So Auth docs](https://api.circle.so/#intro)
 -   [API docs](https://api.circle.so/)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
 
-- Circle uses `API_KEY` auth mode where `Authorization: Token APIkey` is passed to the request header for Authentication.
+- Circle So uses `API_KEY` auth mode where `Authorization: Token APIkey` is passed to the request header for Authentication.
 
-<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/circle.mdx)</Note>
+<Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/circle-so.mdx)</Note>
