--- a/docs-v2/integrations/all/circle-so.mdx
+++ b/docs-v2/integrations/all/circle-so.mdx
@@ -1,6 +1,6 @@
 ---
-title: Circle So
-sidebarTitle: Circle So
+title: Circle.so
+sidebarTitle: Circle.so
 ---
 
 API configurations: [`circle-so`](https://nango.dev/providers.yaml)
@@ -19,13 +19,13 @@ API configurations: [`circle-so`](https://nango.dev/providers.yaml)
 
 ## Getting started
 
--   [Circle So Auth docs](https://api.circle.so/#intro)
+-   [Circle.so Auth docs](https://api.circle.so/#intro)
 -   [API docs](https://api.circle.so/)
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
 
-- Circle So uses `API_KEY` auth mode where `Authorization: Token APIkey` is passed to the request header for Authentication.
+- Circle.so uses `API_KEY` auth mode where `Authorization: Token APIkey` is passed to the request header for Authentication.
 
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/circle-so.mdx)</Note>
