--- a/docs-v2/integrations/communication.mdx
+++ b/docs-v2/integrations/communication.mdx
@@ -12,6 +12,7 @@ sidebarTitle: Communication
     <Card title="Aircall" href="/integrations/all/aircall" color="#68a063" />
     <Card title="Atlassian" href="/integrations/all/atlassian" color="#68a063" />
     <Card title="Chorus" href="/integrations/all/chorus" color="#68a063" />
+    <Card title="Circle.so" href="/integrations/all/circle-so" color="#68a063" />
     <Card title="Dialpad" href="/integrations/all/dialpad" color="#68a063" />
     <Card title="Discord" href="/integrations/all/discord" color="#68a063" />
     <Card title="Facebook" href="/integrations/all/facebook" color="#68a063" />
