--- a/docs-v2/integrations/all/workday.mdx
+++ b/docs-v2/integrations/all/workday.mdx
@@ -1,6 +1,6 @@
 ---
-title: Workable
-sidebarTitle: Workable
+title: Workday
+sidebarTitle: Workday
 ---
 
 API configuration: [`workday`](https://nango.dev/providers.yaml)
