--- a/docs-v2/integrations/all/workday.mdx
+++ b/docs-v2/integrations/all/workday.mdx
@@ -23,7 +23,7 @@ Workday provides two APIs, a REST and a SOAP one. Only the SOAP is currently sup
 
 ## Connection configuration in Nango
 
-Workable requires a user specific subdomain for the API base URL.
+Workday requires a user specific subdomain for the API base URL.
 
 You should request this from the user and pass it to Nango in the `nango.auth()` call:
 
