--- a/docs-v2/integrations/communication.mdx
+++ b/docs-v2/integrations/communication.mdx
@@ -23,6 +23,7 @@ sidebarTitle: Communication
     <Card title="Instantly" href="/integrations/all/instantly" color="#68a063" />
     <Card title="Mailgun" href="/integrations/all/mailgun" color="#68a063" />
     <Card title="Microsoft Teams" href="/integrations/all/microsoft-teams" color="#68a063" />
+    <Card title="Podium" href="/integrations/all/podium" color="#68a063" />
     <Card title="Outlook" href="/integrations/all/outlook" color="#68a063" />
     <Card title="RingCentral" href="/integrations/all/ring-central" color="#68a063" />
     <Card title="Sendgrid" href="/integrations/all/sendgrid" color="#68a063" />
