--- a/docs-v2/integrations/all/salesforce-experience-cloud.mdx
+++ b/docs-v2/integrations/all/salesforce-experience-cloud.mdx
@@ -1,6 +1,6 @@
 ---
-title: Salesforce
-sidebarTitle: Salesforce
+title: Salesforce Experience Cloud
+sidebarTitle: Salesforce Experience Cloud
 ---
 
 API configuration: [`salesforce-experience-cloud`](https://nango.dev/providers.yaml)
