--- a/docs-v2/integrations/productivity.mdx
+++ b/docs-v2/integrations/productivity.mdx
@@ -46,7 +46,7 @@ sidebarTitle: Productivity
     <Card title="Timely" href="/integrations/all/timely" color="#68a063" />
     <Card title="Todoist" href="/integrations/all/todoist" color="#68a063" />
     <Card title="Trello" href="/integrations/all/trello" color="#68a063" />
-    <Card title="Tsheetsteam" href="/integrations/all/tsheetsteam" color="#68a063" />
+    <Card title="TSheetsTeam" href="/integrations/all/tsheetsteam" color="#68a063" />
     <Card title="Wrike" href="/integrations/all/wrike" color="#68a063" />
     <Card title="Zoho Mail" href="/integrations/all/zoho-mail" color="#68a063" />
 </CardGroup>
