--- a/docs-v2/integrations/all/tsheetsteam.mdx
+++ b/docs-v2/integrations/all/tsheetsteam.mdx
@@ -1,6 +1,6 @@
 ---
-title: Tsheetsteam
-sidebarTitle: Tsheetsteam
+title: TSheetsTeam
+sidebarTitle: TSheetsTeam
 ---
 
 API configuration: [`tsheetsteam`](https://nango.dev/providers.yaml)
@@ -21,12 +21,12 @@ API configuration: [`tsheetsteam`](https://nango.dev/providers.yaml)
 
 -   [How to register an Application](https://tsheetsteam.github.io/api_docs/#obtaining-an-api-access-token)
 -   [OAuth related docs](https://tsheetsteam.github.io/api_docs/#authentication)
--   [Tsheetsteam API docs](https://tsheetsteam.github.io/api_docs/#introduction)
+-   [TSheetsTeam API docs](https://tsheetsteam.github.io/api_docs/#introduction)
 
 
 <Tip>Need help getting started? Get help in the [community](https://nango.dev/slack).</Tip>
 
 ## API gotchas
--   Tsheetsteam currently doesn't support scopes.
--   Tsheetsteam enforces a rate limit of 300 calls within any 5 minute time window. Rate limiting is primarily considered on a per-connection basis (per access token). For more details [Tsheetsteam request throttling](https://tsheetsteam.github.io/api_docs/#request-throttling)
+-   TSheetsTeam currently doesn't support scopes.
+-   TSheetsTeam enforces a rate limit of 300 calls within any 5 minute time window. Rate limiting is primarily considered on a per-connection basis (per access token). For more details [TSheetsTeam request throttling](https://tsheetsteam.github.io/api_docs/#request-throttling)
 <Note>Add Getting Started links and Gotchas by [editing this page](https://github.com/nangohq/nango/tree/master/docs-v2/integrations/all/tsheetsteam.mdx)</Note>
